--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
   <script src="js/scripts.js" type="text/javascript"></script>
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
-  <title>Walking Dead Quiz</title>
+  <title>Walking Dead Quiz: Which character are you?</title>
 </head>
 <body>
   <div class="container">
     <div class="panel panel-default">
       <div class="panel-heading">
         <div class="panel-title">
-          <h1>Walking Dead Quiz</h1>
+          <h1>What Character Are You?</h1>
+          <h2>A Walking Dead Quiz</h2>
         </div>
       </div>
       <div class="panel-body">
@@ -95,23 +96,25 @@
           </div>
           <button type="submit" class="btn btn-default" id="submit">Submit</button>
         </form>
-        <div class="result-box" id="glenn">
-          <figure>
-            <img src="img/glenn.jpeg" alt="Image of Glenn from Walking Dead">
-            <figcaption><h2>You are GLENN!</h2></figcaption>
-          </figure>
-        </div>
-        <div class="result-box" id="carl">
-          <figure>
-            <img src="img/carl.png" alt="Image of Carl from Walking Dead">
-            <figcaption><h2>You are CARL!</h2></figcaption>
-          </figure>
-        </div>
-        <div class="result-box" id="gov">
-          <figure>
-            <img src="img/gov.jpg" alt="Image of the Gov. from Walking Dead">
-            <figcaption><h2>You are the GOVERNOR!</h2></figcaption>
-          </figure>
+        <div class="results">
+          <div class="result-box" id="glenn">
+            <figure>
+              <img src="img/glenn.jpeg" alt="Image of Glenn from Walking Dead">
+              <figcaption><h2>You are GLENN!</h2></figcaption>
+            </figure>
+          </div>
+          <div class="result-box" id="carl">
+            <figure>
+              <img src="img/carl.png" alt="Image of Carl from Walking Dead">
+              <figcaption><h2>You are CARL!</h2></figcaption>
+            </figure>
+          </div>
+          <div class="result-box" id="gov">
+            <figure>
+              <img src="img/gov.jpg" alt="Image of the Gov. from Walking Dead">
+              <figcaption><h2>You are the GOVERNOR!</h2></figcaption>
+            </figure>
+          </div>
         </div>
       </div>
     </div>
