Add styles, add quiz reset function, add try again button

--- a/index.html
+++ b/index.html
@@ -115,6 +115,9 @@
               <figcaption><h2>You are the GOVERNOR!</h2></figcaption>
             </figure>
           </div>
+          <div class="try-again-box">
+            <button class="btn btn-default" id="try-again">Try Again</button>
+          </div>
         </div>
       </div>
     </div>
