--- a/index.html
+++ b/index.html
@@ -97,22 +97,23 @@
           <button type="submit" class="btn btn-default" id="submit">Submit</button>
         </form>
         <div class="results">
+          <h2>You Are...</h2>
           <div class="result-box" id="glenn">
             <figure>
               <img src="img/glenn.jpeg" alt="Image of Glenn from Walking Dead">
-              <figcaption><h2>You are GLENN!</h2></figcaption>
+              <figcaption><h1><span class="character-name">Glenn</span></h1></figcaption>
             </figure>
           </div>
           <div class="result-box" id="carl">
             <figure>
               <img src="img/carl.png" alt="Image of Carl from Walking Dead">
-              <figcaption><h2>You are CARL!</h2></figcaption>
+              <figcaption><h1><span class="character-name">Carl</span></h1></figcaption>
             </figure>
           </div>
           <div class="result-box" id="gov">
             <figure>
               <img src="img/gov.jpg" alt="Image of the Gov. from Walking Dead">
-              <figcaption><h2>You are the GOVERNOR!</h2></figcaption>
+              <figcaption><h1><span class="character-name">The Governor</span></h1></figcaption>
             </figure>
           </div>
           <div class="try-again-box">
