--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <script src="js/scripts.js" type="text/javascript"></script>
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One|Gloria+Hallelujah" rel="stylesheet">
   <title>Walking Dead Quiz: Which character are you?</title>
 </head>
 <body>
